# cmake

t1/: CMakeLists.txt
t1/doc/: hello.txt
t1/src/: CMakeLists.txt  main.cpp
t2/: CMakeLists.txt
t2/src/: CMakeLists.txt  main.cpp
t3/: CMakeLists.txt
t3/lib/: CMakeLists.txt  hello.c  hello.h
